src/core-crm/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>The Risk data object stores information about risks. Typically the risks captured are related to business opportunities and/or projects.</description>
    <label>Risk</label>
    <nameField>
        <displayFormat>Risk-{0000000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>