src/core-crm/objects/Risk__c/fields/Mitigated__c.field-meta.xml
<CustomField>
    <fullName>Mitigated__c</fullName>
    <description>Indicates whether the risk has been mitigated or not.</description>
    <label>Mitigated</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>