src/core-crm/objects/Risk__c/fields/Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Plan__c</fullName>
    <description>A description of the business’s mitigation plan for the risk.</description>
    <label>Mitigation Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>