src/core-crm/objects/Risk__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Opportunity Outcome object.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>