src/core-crm/objects/Risk__c/fields/QUT_Accepted__c.field-meta.xml
<CustomField>
    <fullName>QUT_Accepted__c</fullName>
    <description>Indicates if QUT has accepted the risk or not.</description>
    <label>QUT Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>