src/core-crm/objects/Risk__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <description>Risk description.</description>
    <label>Risk Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>