src/core-crm/objects/Risk__c/fields/Risk_Title__c.field-meta.xml
<CustomField>
    <fullName>Risk_Title__c</fullName>
    <description>The name/title of the risk.</description>
    <label>Risk Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>