src/core-crm/objects/Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <description>The type of risk.</description>
    <label>Risk Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health and Safety</fullName>
            </value>
            <value>
                <fullName>DFAT Travel Risks</fullName>
            </value>
            <value>
                <fullName>Logistical</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Technological</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>